# RivSher

./: README.md  package-lock.json  package.json  форма регистрации.dia
backend/application/: dock_router.py  main.py  pyproject.toml  trip_router.py  user_router.py
backend/application/fixtures/: moscow_docks.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  router.tsx
frontend/src/components/Button/: index.tsx
frontend/src/components/ButtonChoice/: index.tsx  style.module.css
frontend/src/components/Hero/: index.tsx
frontend/src/components/Selection/: index.tsx
frontend/src/components/Variants/: VariantItem.tsx
frontend/src/components/view/: unionbody.tsx  uniontab.tsx
frontend/src/icon/: index.tsx
frontend/src/pages/Enter/: style.module.css
frontend/src/pages/Search/: Search.tsx  style.module.css
src/: App.tsx  index.css  router.tsx
src/components/ButtonChoice/: style.module.css
src/components/Header/: Burger.tsx  index.tsx  style.module.css
src/components/Hero/: index.tsx
src/components/Variants/: index.tsx
src/components/form/: input.tsx
src/components/view/: unionbox.tsx
src/pages/Enter/: Enter.tsx  style.module.css
src/pages/Search/: style.module.css
