[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi = "^0.111.0"
orjson = "^3.10.6"
loguru = "^0.7.2"
sentry-sdk = "^2.12.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

